# Rustware

./: .gitignore  Cargo.toml  README.md  build.rs  gui.py
ai/: Cargo.toml  build.rs  hello.c
ai/src/: communication.rs  config.rs  constants.rs  gui_bridge.rs  macros.rs  main.rs  math.rs  proto.rs  proto_conversions.rs  setup.rs  world.rs
ai/src/backend/: mod.rs  ssl_network_listener.rs  ssl_network_simulator.rs  ssl_synchronous_simulator.rs
ai/src/communication/: buffer.rs  mod.rs  network.rs  node.rs
ai/src/ersim_wrapper/: ersim.cpp  ersim.h
ai/src/evaluation/: passing.rs
ai/src/experimental/: mod.rs  passing.rs
ai/src/gameplay/: mod.rs  play.rs  tactic.rs  world.rs
ai/src/gameplay/evaluation/: best_shot.rs  mod.rs  passing.rs
ai/src/geom/: angle.rs  circle.rs  point.rs  rectangle.rs  vector.rs
ai/src/motion/: mod.rs  tracker.rs
ai/src/perception/: ball_filter.rs  game_state.rs  mod.rs  robot_filter.rs  world.rs
ai/src/simulation/: mod.rs  simulated_test_runner.rs
ai/src/world/: game_state.rs  mod.rs  vision.rs
config/: config.pbtxt  config.proto
gui/: config  proto  requirements.txt
gui/src/: colors.py  constants.py  log_widget.py  main.py  named_value_plotter.py  proto_paths.py
proto/: metrics.proto  trajectory.proto  visualization.proto  world.proto
scripts/: compile_all_protos.sh  fix_formatting.sh  install_deps.sh  install_erforce_sim.sh  install_ssl_game_controller.sh  install_ssl_protos.sh  install_tigers_autoref.sh  setup_erforce_sim_bindings.sh  setup_erforce_sim_pybind.sh  setup_pyenv.sh
src/: communication.rs  constants.rs  evaluation.rs  geom.rs  gui.rs  gui_bridge.rs  main.rs  math.rs  motion.rs  proto.rs  world.rs
(+33 files in other folders)
