[package]
name = "rustware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
float-cmp = "0.9.0"
crossbeam = "0.8.2"
multiqueue2 = "0.1.7"
strum = "0.24.1"
strum_macros = "0.24.1"
prost = "0.11.3"
prost-types = "0.11.2"
tokio = { version = "0.3.7", features = ["full"] }
socket2 = "0.4.2"
clap = "4.0.29"
net2 = "0.2.38"

[build-dependencies]
prost-build = "0.11.4"
