[package]
name = "rustware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
float-cmp = "0.9.0"
multiqueue2 = "0.1.7"
strum = "0.24.1"
strum_macros = "0.24.1"
prost = "0.11.3"
prost-types = "0.11.2"
net2 = "0.2.38"
zmq = "0.10.0"
protobuf = "3.2.0"
libc = "0.2.138"
bitflags = "1.3.2"
cmake = "0.1.49"
cxx = "1.0.83"


[build-dependencies]
prost-build = "0.11.4"
protobuf-codegen = "3.2.0"
make-cmd = "0.1.0"
cmake = "0.1.49"
cxx-build = "1.0.83"
