[package]
name = "rustware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
float-cmp = "0.9.0"
multiqueue2 = "0.1.7"
strum = "0.24.1"
strum_macros = "0.24.1"
prost = "0.11.3"
prost-types = "0.11.2"
net2 = "0.2.38"
zmq = "0.10.0"
protobuf = "3.2.0"
serde = "1.0.150"
serde_json = "1.0.89"
munkres = "0.5.2"


[build-dependencies]
prost-build = "0.11.4"
protobuf-codegen = "3.2.0"
